# faster-whisper-tools

./: README.md  pyproject.toml  requirements.txt
faster_whisper_tools/: __init__.py  transcribe_audio.py
