[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faster-whisper-tools"
version = "0.1.0"
authors = [
  { name = "Jackson Gordon" },
]
description = "faster-whisper utilities."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/jcgordon10/faster-whisper-tools"
Issues = "https://github.com/jcgordon10/faster-whisper-tools/issues"